--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "playwright test",
     "test:ui": "playwright test --ui",
     "test:headed": "playwright test --headed",
-    "test:debug": "playwright test --debug"
+    "test:debug": "playwright test --debug",
+    "perf:health": "k6 run tests/performance/api-load-test.js",
+    "perf:light": "k6 run tests/performance/api-health-check.js"
   },
   "keywords": [],
   "author": "",
