--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "outDir": "./dist",
     "baseUrl": ".",
     "paths": {
-      "@pages/*": ["tests/ui/page-objects/*"],
+      "@pages/*": ["tests/playwright/ui/page-objects/*"],
       "@utils/*": ["tests/utils/*"]
     }
   },
