--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "test": "playwright test",
+    "test:api": "npx playwright test tests/playwright/api/converter-api.spec.ts",
+    "test:fe": "npx playwright test tests/playwright/ui/converter-ui.spec.ts",
     "test:ui": "playwright test --ui",
     "test:headed": "playwright test --headed",
     "test:debug": "playwright test --debug",
